// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URL state sharing round-trip: create state, encode to URL, reload, compare snapshots 1`] = `
{
  "originalCanvas": "
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M250,100 L325,100 L325,100 L400,100" class="arrow-line"></path><path d="M250,100 L325,100 L325,100 L400,100" class="arrow-clickable"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-line"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-clickable"></path></svg>
      <div class="box" data-id="ID" style="left: 50px; top: 50px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">API Gateway</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box" data-id="ID" style="left: 400px; top: 50px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Auth Service</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box" data-id="ID" style="left: 400px; top: 300px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Database</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="free-text" data-ft-id="ft-ID" style="left: 200px; top: 200px;"></div>",
  "originalSvg": "
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M250,100 L325,100 L325,100 L400,100" class="arrow-line"></path><path d="M250,100 L325,100 L325,100 L400,100" class="arrow-clickable"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-line"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-clickable"></path>",
}
`;

exports[`arrow operations arrow between two boxes renders SVG paths 1`] = `
"
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M200,50 L300,50 L300,250 L400,250" class="arrow-line"></path><path d="M200,50 L300,50 L300,250 L400,250" class="arrow-clickable"></path>"
`;

exports[`arrow operations multiple arrows snapshot 1`] = `
"
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M200,50 L300,50 L300,50 L400,50" class="arrow-line"></path><path d="M200,50 L300,50 L300,50 L400,50" class="arrow-clickable"></path><path d="M100,100 L100,200 L300,200 L300,300" class="arrow-line"></path><path d="M100,100 L100,200 L300,200 L300,300" class="arrow-clickable"></path><path d="M500,100 L500,225 L400,225 L400,350" class="arrow-line"></path><path d="M500,100 L500,225 L400,225 L400,350" class="arrow-clickable"></path>"
`;

exports[`arrow operations selected arrow shows endpoint circles 1`] = `
"
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M200,50 L300,50 L300,50 L400,50" class="arrow-line arrow-selected"></path><path d="M200,50 L300,50 L300,50 L400,50" class="arrow-clickable"></path><circle cx="200" cy="50" r="5" class="arrow-endpoint"></circle><circle cx="400" cy="50" r="5" class="arrow-endpoint"></circle>"
`;

exports[`box operations addBox creates a box in the DOM 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="box selected" data-id="ID" style="left: 100px; top: 100px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Test Box</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>"
`;

exports[`box operations deleteBox removes box from DOM 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      "
`;

exports[`box operations multiple boxes snapshot 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="box" data-id="ID" style="left: 0px; top: 0px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Box A</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box" data-id="ID" style="left: 300px; top: 200px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Box B</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box selected" data-id="ID" style="left: 100px; top: 400px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Box C</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>"
`;

exports[`box text editing text editing snapshot before and after 1`] = `
{
  "afterEdit": "
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="box selected" data-id="ID" style="left: 100px; top: 100px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Modified</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>",
  "beforeEdit": "
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="box selected" data-id="ID" style="left: 100px; top: 100px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Initial</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>",
}
`;

exports[`clear all confirmClear removes everything 1`] = `
"
        <svg id="arrows"></svg>
      "
`;

exports[`edge handles edge handles snapshot 1`] = `
"<div class="edge-handle top-0"></div>
<div class="edge-handle top-1"></div>
<div class="edge-handle top-2"></div>
<div class="edge-handle right-0"></div>
<div class="edge-handle right-1"></div>
<div class="edge-handle right-2"></div>
<div class="edge-handle bottom-0"></div>
<div class="edge-handle bottom-1"></div>
<div class="edge-handle bottom-2"></div>
<div class="edge-handle left-0"></div>
<div class="edge-handle left-1"></div>
<div class="edge-handle left-2"></div>"
`;

exports[`full state integration complex whiteboard state snapshot 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M250,100 L325,100 L325,100 L400,100" class="arrow-line"></path><path d="M250,100 L325,100 L325,100 L400,100" class="arrow-clickable"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-line"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-clickable"></path><path d="M400,350 L325,350 L325,350 L250,350" class="arrow-line"></path><path d="M400,350 L325,350 L325,350 L250,350" class="arrow-clickable"></path><path d="M150,150 L150,225 L150,225 L150,300" class="arrow-line"></path><path d="M150,150 L150,225 L150,225 L150,300" class="arrow-clickable"></path></svg>
      <div class="box" data-id="ID" style="left: 50px; top: 50px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">API Gateway</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box" data-id="ID" style="left: 400px; top: 50px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Auth Service</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box" data-id="ID" style="left: 400px; top: 300px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Database</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box selected" data-id="ID" style="left: 50px; top: 300px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Cache</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="free-text" data-ft-id="ft-ID" style="left: 250px; top: 200px;"></div>"
`;

exports[`full state integration complex whiteboard state snapshot 2`] = `
"
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        <path d="M250,100 L325,100 L325,100 L400,100" class="arrow-line"></path><path d="M250,100 L325,100 L325,100 L400,100" class="arrow-clickable"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-line"></path><path d="M500,150 L500,225 L500,225 L500,300" class="arrow-clickable"></path><path d="M400,350 L325,350 L325,350 L250,350" class="arrow-line"></path><path d="M400,350 L325,350 L325,350 L250,350" class="arrow-clickable"></path><path d="M150,150 L150,225 L150,225 L150,300" class="arrow-line"></path><path d="M150,150 L150,225 L150,225 L150,300" class="arrow-clickable"></path>"
`;

exports[`initial HTML state initial canvas snapshot 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      "
`;

exports[`initial HTML state renders toolbar 1`] = `
"
      <button id="undo-btn" class="icon-btn" onclick="undo()" title="Undo (Ctrl+Z)" disabled="">
        <svg viewBox="0 0 24 24">
          <path d="M12.5 8c-2.65 0-5.05 1.04-6.83 2.73L3 8v9h9l-2.83-2.83A7.004 7.004 0 0119 12c0-.35-.02-.7-.07-1.04l1.98-.35A8.97 8.97 0 0112.5 8z"></path>
        </svg>
      </button>
      <button id="redo-btn" class="icon-btn" onclick="redo()" title="Redo (Ctrl+Shift+Z)" disabled="">
        <svg viewBox="0 0 24 24">
          <path d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16a8.002 8.002 0 017.6-5.5c1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"></path>
        </svg>
      </button>
      <span class="sep">|</span>
      <button onclick="clearAll()" title="Clear All">
        <svg class="btn-icon" viewBox="0 0 24 24">
          <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
        </svg>
        <span class="btn-label">Clear All</span>
      </button>
      <div class="save-wrapper">
        <button onclick="toggleSaveMenu()" title="Save" id="save-btn">
          <svg class="btn-icon" viewBox="0 0 24 24">
            <path d="M17 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"></path>
          </svg>
          <span class="btn-label">Save</span>
        </button>
        <div id="save-menu" style="display: none">
          <button onclick="
              exportJSON();
              closeSaveMenu();
            ">
            Export JSON
          </button>
          <button onclick="
              exportSVG();
              closeSaveMenu();
            ">
            Export SVG
          </button>
          <button onclick="
              shareURL();
              closeSaveMenu();
            ">
            Copy Share Link
          </button>
        </div>
      </div>
      <button onclick="importJSON()" title="Load">
        <svg class="btn-icon" viewBox="0 0 24 24">
          <path d="M20 6h-8l-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm0 12H4V8h16v10z"></path>
        </svg>
        <span class="btn-label">Load</span>
      </button>
      <span class="sep">|</span>
      <button id="text-mode-btn" class="icon-btn" onclick="toggleTextMode()" title="Text mode (T)">
        <svg viewBox="0 0 24 24"><path d="M5 4v3h5.5v12h3V7H19V4H5z"></path></svg>
      </button>
      <span class="sep">|</span>
      <button class="icon-btn" onclick="resetView()" title="Reset view">
        <svg viewBox="0 0 24 24">
          <path d="M15 3l2.3 2.3-2.89 2.87 1.42 1.42L18.7 6.7 21 9V3h-6zM3 9l2.3-2.3 2.87 2.89 1.42-1.42L6.7 5.3 9 3H3v6zm6 12l-2.3-2.3 2.89-2.87-1.42-1.42L5.3 17.3 3 15v6h6zm12-6l-2.3 2.3-2.87-2.89-1.42 1.42 2.89 2.87L15 21h6v-6z"></path>
        </svg>
      </button>
      <button id="delete-btn" class="icon-btn" onclick="deleteSelected()" title="Delete (Backspace)" style="display: none">
        <svg viewBox="0 0 24 24">
          <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
        </svg>
      </button>
      <button class="icon-btn gear-btn" onclick="openThemeModal()" title="Themes">
        <svg viewBox="0 0 24 24">
          <path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58a.49.49 0 00.12-.61l-1.92-3.32a.49.49 0 00-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54a.484.484 0 00-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96a.49.49 0 00-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.07.62-.07.94s.02.64.07.94l-2.03 1.58a.49.49 0 00-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6A3.6 3.6 0 1112 8.4a3.6 3.6 0 010 7.2z"></path>
        </svg>
      </button>
    "
`;

exports[`pure functions buildArrowPath all direction combos snapshot 1`] = `
{
  "bottom": "M200,200 L200,300 L500,300 L500,400",
  "left": "M200,200 L350,200 L350,400 L500,400",
  "right": "M200,200 L350,200 L350,400 L500,400",
  "top": "M200,200 L200,300 L500,300 L500,400",
}
`;

exports[`pure functions generateSVG empty state snapshot 1`] = `"<svg xmlns="http://www.w3.org/2000/svg" width="280" height="280"><defs><marker id="ah" markerWidth="10" markerHeight="7" refX="10" refY="3.5" orient="auto"><polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"/></marker></defs></svg>"`;

exports[`pure functions generateSVG with content snapshot 1`] = `"<svg xmlns="http://www.w3.org/2000/svg" width="630" height="250"><defs><marker id="ah" markerWidth="10" markerHeight="7" refX="10" refY="3.5" orient="auto"><polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"/></marker></defs><rect x="40" y="40" width="200" height="100" rx="12" fill="white" stroke="#e2e8f0" stroke-width="2"/><text x="140" y="90" text-anchor="middle" dominant-baseline="central" font-family="sans-serif" font-size="14" fill="#334155">Server</text><rect x="390" y="40" width="200" height="100" rx="12" fill="white" stroke="#e2e8f0" stroke-width="2"/><text x="490" y="90" text-anchor="middle" dominant-baseline="central" font-family="sans-serif" font-size="14" fill="#334155">Client</text><path d="M240,90 L315,90 L315,90 L390,90" fill="none" stroke="#94a3b8" stroke-width="2" marker-end="url(#ah)"/><text x="240" y="190" font-family="sans-serif" font-size="15" fill="#334155">API</text></svg>"`;

exports[`pure functions getAnchor all positions snapshot 1`] = `
{
  "bottom-0": {
    "x": 150,
    "y": 200,
  },
  "bottom-1": {
    "x": 200,
    "y": 200,
  },
  "bottom-2": {
    "x": 250,
    "y": 200,
  },
  "left-0": {
    "x": 100,
    "y": 125,
  },
  "left-1": {
    "x": 100,
    "y": 150,
  },
  "left-2": {
    "x": 100,
    "y": 175,
  },
  "right-0": {
    "x": 300,
    "y": 125,
  },
  "right-1": {
    "x": 300,
    "y": 150,
  },
  "right-2": {
    "x": 300,
    "y": 175,
  },
  "top-0": {
    "x": 150,
    "y": 100,
  },
  "top-1": {
    "x": 200,
    "y": 100,
  },
  "top-2": {
    "x": 250,
    "y": 100,
  },
}
`;

exports[`save and load full state round-trip snapshot 1`] = `
{
  "arrows": [
    {
      "from": 1,
      "fromSide": "right-1",
      "to": 2,
      "toSide": "left-1",
    },
  ],
  "boxes": [
    {
      "h": 100,
      "id": 1,
      "text": "Server",
      "w": 200,
      "x": 50,
      "y": 50,
    },
    {
      "h": 100,
      "id": 2,
      "text": "Client",
      "w": 200,
      "x": 400,
      "y": 50,
    },
  ],
  "freeTexts": [
    {
      "id": "ft-NORMALIZED",
      "text": "Note",
      "x": 200,
      "y": 200,
    },
  ],
  "nextId": 3,
}
`;

exports[`save menu exportSVG generates valid SVG from live state snapshot 1`] = `"<svg xmlns="http://www.w3.org/2000/svg" width="630" height="250"><defs><marker id="ah" markerWidth="10" markerHeight="7" refX="10" refY="3.5" orient="auto"><polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"/></marker></defs><rect x="40" y="40" width="200" height="100" rx="12" fill="white" stroke="#e2e8f0" stroke-width="2"/><text x="140" y="90" text-anchor="middle" dominant-baseline="central" font-family="sans-serif" font-size="14" fill="#334155">API Gateway</text><rect x="390" y="40" width="200" height="100" rx="12" fill="white" stroke="#e2e8f0" stroke-width="2"/><text x="490" y="90" text-anchor="middle" dominant-baseline="central" font-family="sans-serif" font-size="14" fill="#334155">Database</text><path d="M240,90 L315,90 L315,90 L390,90" fill="none" stroke="#94a3b8" stroke-width="2" marker-end="url(#ah)"/><text x="190" y="190" font-family="sans-serif" font-size="15" fill="#334155">REST API</text></svg>"`;

exports[`save menu save menu snapshot 1`] = `
"
          <button onclick="
              exportJSON();
              closeSaveMenu();
            ">
            Export JSON
          </button>
          <button onclick="
              exportSVG();
              closeSaveMenu();
            ">
            Export SVG
          </button>
          <button onclick="
              shareURL();
              closeSaveMenu();
            ">
            Copy Share Link
          </button>
        "
`;

exports[`text mode addFreeText creates a text element 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="free-text" data-ft-id="ft-ID" style="left: 100px; top: 200px;"></div>"
`;

exports[`text mode multiple free texts snapshot 1`] = `
"
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="free-text" data-ft-id="ft-ID" style="left: 50px; top: 50px;"></div><div class="free-text" data-ft-id="ft-ID" style="left: 200px; top: 300px;"></div><div class="free-text" data-ft-id="ft-ID" style="left: 400px; top: 100px;"></div>"
`;

exports[`themes all theme keys snapshot 1`] = `
[
  "ayu",
  "ayuLight",
  "catppuccin",
  "cobalt2",
  "dracula",
  "everforest",
  "github",
  "githubLight",
  "gruvbox",
  "kanagawa",
  "kanagawaLight",
  "kanagawaWave",
  "light",
  "matrix",
  "midnight",
  "monokai",
  "nightowl",
  "nord",
  "onedark",
  "onelight",
  "palenight",
  "poimandres",
  "rosepine",
  "solarized",
  "solarizedLight",
  "synthwave",
  "tokyo",
  "vesper",
  "vitesse",
]
`;

exports[`themes all themes data snapshot 1`] = `
{
  "ayu": {
    "accent": "#e6b450",
    "accentGlow": "rgba(230,180,80,0.15)",
    "accentHover": "#f29668",
    "arrow": "#3d424d",
    "bg": "#0b0e14",
    "boxBg": "#11151c",
    "boxBorder": "#1c2029",
    "boxEditBg": "#0b0e14",
    "boxHoverBorder": "#e6b450",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.5)",
    "boxText": "#bfbdb6",
    "btnBorder": "#1c2029",
    "btnHoverBg": "#1c2029",
    "btnHoverBorder": "#e6b450",
    "btnText": "#bfbdb6",
    "dot": "#11151c",
    "drawPreviewBg": "rgba(230,180,80,0.06)",
    "hintBg": "#11151c",
    "hintText": "#3d424d",
    "modalBg": "#11151c",
    "modalOverlay": "rgba(0,0,0,0.6)",
    "modalSub": "#565b66",
    "modalText": "#bfbdb6",
    "name": "Ayu Dark",
    "swatchBg": "#0b0e14",
    "swatchBorder": "#1c2029",
    "swatchBox": "#e6b450",
    "swatchBoxBorder": "#e6b450",
    "toolbarBg": "#11151c",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.5)",
    "toolbarText": "#565b66",
    "toolbarTitle": "#bfbdb6",
  },
  "ayuLight": {
    "accent": "#f2ae49",
    "accentGlow": "rgba(242,174,73,0.15)",
    "accentHover": "#fa8d3e",
    "arrow": "#abb0b6",
    "bg": "#fcfcfc",
    "boxBg": "#f3f3f3",
    "boxBorder": "#dcdcdc",
    "boxEditBg": "#fcfcfc",
    "boxHoverBorder": "#f2ae49",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.06)",
    "boxText": "#5c6166",
    "btnBorder": "#dcdcdc",
    "btnHoverBg": "#eaeaea",
    "btnHoverBorder": "#f2ae49",
    "btnText": "#5c6166",
    "dot": "#e8e8e8",
    "drawPreviewBg": "rgba(242,174,73,0.06)",
    "hintBg": "#f3f3f3",
    "hintText": "#abb0b6",
    "modalBg": "#f3f3f3",
    "modalOverlay": "rgba(0,0,0,0.3)",
    "modalSub": "#8a9199",
    "modalText": "#5c6166",
    "name": "Ayu Light",
    "swatchBg": "#fcfcfc",
    "swatchBorder": "#dcdcdc",
    "swatchBox": "#f2ae49",
    "swatchBoxBorder": "#f2ae49",
    "toolbarBg": "#f3f3f3",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.05)",
    "toolbarText": "#8a9199",
    "toolbarTitle": "#5c6166",
  },
  "catppuccin": {
    "accent": "#cba6f7",
    "accentGlow": "rgba(203,166,247,0.2)",
    "accentHover": "#f38ba8",
    "arrow": "#6c7086",
    "bg": "#1e1e2e",
    "boxBg": "#313244",
    "boxBorder": "#45475a",
    "boxEditBg": "#1e1e2e",
    "boxHoverBorder": "#cba6f7",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#cdd6f4",
    "btnBorder": "#45475a",
    "btnHoverBg": "#45475a",
    "btnHoverBorder": "#cba6f7",
    "btnText": "#cdd6f4",
    "dot": "#313244",
    "drawPreviewBg": "rgba(203,166,247,0.08)",
    "hintBg": "#313244",
    "hintText": "#6c7086",
    "modalBg": "#313244",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#cba6f7",
    "modalText": "#cdd6f4",
    "name": "Catppuccin",
    "swatchBg": "#1e1e2e",
    "swatchBorder": "#45475a",
    "swatchBox": "#cba6f7",
    "swatchBoxBorder": "#cba6f7",
    "toolbarBg": "#313244",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#cba6f7",
    "toolbarTitle": "#cdd6f4",
  },
  "cobalt2": {
    "accent": "#ffc600",
    "accentGlow": "rgba(255,198,0,0.2)",
    "accentHover": "#fb94ff",
    "arrow": "#3b7ea1",
    "bg": "#193549",
    "boxBg": "#1f4662",
    "boxBorder": "#2a5a7b",
    "boxEditBg": "#193549",
    "boxHoverBorder": "#ffc600",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#ffffff",
    "btnBorder": "#2a5a7b",
    "btnHoverBg": "#2a5a7b",
    "btnHoverBorder": "#ffc600",
    "btnText": "#ffffff",
    "dot": "#1f4662",
    "drawPreviewBg": "rgba(255,198,0,0.08)",
    "hintBg": "#1f4662",
    "hintText": "#3b7ea1",
    "modalBg": "#1f4662",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#ffc600",
    "modalText": "#ffffff",
    "name": "Cobalt2",
    "swatchBg": "#193549",
    "swatchBorder": "#2a5a7b",
    "swatchBox": "#ffc600",
    "swatchBoxBorder": "#ffc600",
    "toolbarBg": "#1f4662",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#ffc600",
    "toolbarTitle": "#ffffff",
  },
  "dracula": {
    "accent": "#bd93f9",
    "accentGlow": "rgba(189,147,249,0.2)",
    "accentHover": "#ff79c6",
    "arrow": "#6272a4",
    "bg": "#282a36",
    "boxBg": "#44475a",
    "boxBorder": "#6272a4",
    "boxEditBg": "#282a36",
    "boxHoverBorder": "#bd93f9",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#f8f8f2",
    "btnBorder": "#6272a4",
    "btnHoverBg": "#6272a4",
    "btnHoverBorder": "#bd93f9",
    "btnText": "#f8f8f2",
    "dot": "#44475a",
    "drawPreviewBg": "rgba(189,147,249,0.08)",
    "hintBg": "#44475a",
    "hintText": "#6272a4",
    "modalBg": "#44475a",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#bd93f9",
    "modalText": "#f8f8f2",
    "name": "Dracula",
    "swatchBg": "#282a36",
    "swatchBorder": "#6272a4",
    "swatchBox": "#bd93f9",
    "swatchBoxBorder": "#bd93f9",
    "toolbarBg": "#44475a",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#bd93f9",
    "toolbarTitle": "#f8f8f2",
  },
  "everforest": {
    "accent": "#a7c080",
    "accentGlow": "rgba(167,192,128,0.2)",
    "accentHover": "#83c092",
    "arrow": "#859289",
    "bg": "#2d353b",
    "boxBg": "#343f44",
    "boxBorder": "#475258",
    "boxEditBg": "#2d353b",
    "boxHoverBorder": "#a7c080",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.3)",
    "boxText": "#d3c6aa",
    "btnBorder": "#475258",
    "btnHoverBg": "#475258",
    "btnHoverBorder": "#a7c080",
    "btnText": "#d3c6aa",
    "dot": "#343f44",
    "drawPreviewBg": "rgba(167,192,128,0.08)",
    "hintBg": "#343f44",
    "hintText": "#859289",
    "modalBg": "#343f44",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#859289",
    "modalText": "#d3c6aa",
    "name": "Everforest",
    "swatchBg": "#2d353b",
    "swatchBorder": "#475258",
    "swatchBox": "#a7c080",
    "swatchBoxBorder": "#a7c080",
    "toolbarBg": "#343f44",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.3)",
    "toolbarText": "#859289",
    "toolbarTitle": "#d3c6aa",
  },
  "github": {
    "accent": "#58a6ff",
    "accentGlow": "rgba(88,166,255,0.15)",
    "accentHover": "#1f6feb",
    "arrow": "#484f58",
    "bg": "#0d1117",
    "boxBg": "#161b22",
    "boxBorder": "#30363d",
    "boxEditBg": "#0d1117",
    "boxHoverBorder": "#58a6ff",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#c9d1d9",
    "btnBorder": "#30363d",
    "btnHoverBg": "#21262d",
    "btnHoverBorder": "#58a6ff",
    "btnText": "#c9d1d9",
    "dot": "#161b22",
    "drawPreviewBg": "rgba(88,166,255,0.06)",
    "hintBg": "#161b22",
    "hintText": "#484f58",
    "modalBg": "#161b22",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#8b949e",
    "modalText": "#c9d1d9",
    "name": "GitHub Dark",
    "swatchBg": "#0d1117",
    "swatchBorder": "#30363d",
    "swatchBox": "#58a6ff",
    "swatchBoxBorder": "#58a6ff",
    "toolbarBg": "#161b22",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#8b949e",
    "toolbarTitle": "#c9d1d9",
  },
  "githubLight": {
    "accent": "#0969da",
    "accentGlow": "rgba(9,105,218,0.12)",
    "accentHover": "#0550ae",
    "arrow": "#8c959f",
    "bg": "#ffffff",
    "boxBg": "#f6f8fa",
    "boxBorder": "#d0d7de",
    "boxEditBg": "#ffffff",
    "boxHoverBorder": "#0969da",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.06)",
    "boxText": "#24292f",
    "btnBorder": "#d0d7de",
    "btnHoverBg": "#eaeef2",
    "btnHoverBorder": "#0969da",
    "btnText": "#24292f",
    "dot": "#e8eaed",
    "drawPreviewBg": "rgba(9,105,218,0.04)",
    "hintBg": "#f6f8fa",
    "hintText": "#8c959f",
    "modalBg": "#f6f8fa",
    "modalOverlay": "rgba(0,0,0,0.3)",
    "modalSub": "#57606a",
    "modalText": "#24292f",
    "name": "GitHub Light",
    "swatchBg": "#ffffff",
    "swatchBorder": "#d0d7de",
    "swatchBox": "#0969da",
    "swatchBoxBorder": "#0969da",
    "toolbarBg": "#f6f8fa",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.06), 0 0 0 1px rgba(0,0,0,0.04)",
    "toolbarText": "#57606a",
    "toolbarTitle": "#24292f",
  },
  "gruvbox": {
    "accent": "#fe8019",
    "accentGlow": "rgba(254,128,25,0.2)",
    "accentHover": "#fabd2f",
    "arrow": "#a89984",
    "bg": "#282828",
    "boxBg": "#3c3836",
    "boxBorder": "#665c54",
    "boxEditBg": "#282828",
    "boxHoverBorder": "#fe8019",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#ebdbb2",
    "btnBorder": "#665c54",
    "btnHoverBg": "#504945",
    "btnHoverBorder": "#fe8019",
    "btnText": "#ebdbb2",
    "dot": "#3c3836",
    "drawPreviewBg": "rgba(254,128,25,0.08)",
    "hintBg": "#3c3836",
    "hintText": "#a89984",
    "modalBg": "#3c3836",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#fe8019",
    "modalText": "#ebdbb2",
    "name": "Gruvbox",
    "swatchBg": "#282828",
    "swatchBorder": "#665c54",
    "swatchBox": "#fe8019",
    "swatchBoxBorder": "#fe8019",
    "toolbarBg": "#3c3836",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#fe8019",
    "toolbarTitle": "#ebdbb2",
  },
  "kanagawa": {
    "accent": "#e6c384",
    "accentGlow": "rgba(230,195,132,0.2)",
    "accentHover": "#ff5d62",
    "arrow": "#54546d",
    "bg": "#181616",
    "boxBg": "#282727",
    "boxBorder": "#393836",
    "boxEditBg": "#181616",
    "boxHoverBorder": "#e6c384",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#c8c093",
    "btnBorder": "#393836",
    "btnHoverBg": "#393836",
    "btnHoverBorder": "#e6c384",
    "btnText": "#c8c093",
    "dot": "#282727",
    "drawPreviewBg": "rgba(230,195,132,0.08)",
    "hintBg": "#282727",
    "hintText": "#54546d",
    "modalBg": "#282727",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#a6a69c",
    "modalText": "#c8c093",
    "name": "Kanagawa Dragon",
    "swatchBg": "#181616",
    "swatchBorder": "#393836",
    "swatchBox": "#e6c384",
    "swatchBoxBorder": "#e6c384",
    "toolbarBg": "#282727",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#a6a69c",
    "toolbarTitle": "#c8c093",
  },
  "kanagawaLight": {
    "accent": "#957fb8",
    "accentGlow": "rgba(149,127,184,0.2)",
    "accentHover": "#d7827e",
    "arrow": "#8a8980",
    "bg": "#f2ecbc",
    "boxBg": "#e7dba0",
    "boxBorder": "#d7ca9e",
    "boxEditBg": "#f2ecbc",
    "boxHoverBorder": "#957fb8",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.08)",
    "boxText": "#545464",
    "btnBorder": "#d7ca9e",
    "btnHoverBg": "#dcd1a8",
    "btnHoverBorder": "#957fb8",
    "btnText": "#545464",
    "dot": "#e7dba0",
    "drawPreviewBg": "rgba(149,127,184,0.06)",
    "hintBg": "#e7dba0",
    "hintText": "#8a8980",
    "modalBg": "#e7dba0",
    "modalOverlay": "rgba(0,0,0,0.3)",
    "modalSub": "#8a8980",
    "modalText": "#545464",
    "name": "Kanagawa Lotus",
    "swatchBg": "#f2ecbc",
    "swatchBorder": "#d7ca9e",
    "swatchBox": "#957fb8",
    "swatchBoxBorder": "#957fb8",
    "toolbarBg": "#e7dba0",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.08)",
    "toolbarText": "#8a8980",
    "toolbarTitle": "#545464",
  },
  "kanagawaWave": {
    "accent": "#7e9cd8",
    "accentGlow": "rgba(126,156,216,0.2)",
    "accentHover": "#957fb8",
    "arrow": "#54546d",
    "bg": "#1f1f28",
    "boxBg": "#2a2a37",
    "boxBorder": "#363646",
    "boxEditBg": "#1f1f28",
    "boxHoverBorder": "#7e9cd8",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#dcd7ba",
    "btnBorder": "#363646",
    "btnHoverBg": "#363646",
    "btnHoverBorder": "#7e9cd8",
    "btnText": "#dcd7ba",
    "dot": "#2a2a37",
    "drawPreviewBg": "rgba(126,156,216,0.08)",
    "hintBg": "#2a2a37",
    "hintText": "#54546d",
    "modalBg": "#2a2a37",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#727169",
    "modalText": "#dcd7ba",
    "name": "Kanagawa Wave",
    "swatchBg": "#1f1f28",
    "swatchBorder": "#363646",
    "swatchBox": "#7e9cd8",
    "swatchBoxBorder": "#7e9cd8",
    "toolbarBg": "#2a2a37",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#727169",
    "toolbarTitle": "#dcd7ba",
  },
  "light": {
    "accent": "#3b82f6",
    "accentGlow": "rgba(59,130,246,0.15)",
    "accentHover": "#2563eb",
    "arrow": "#94a3b8",
    "bg": "#f8f9fb",
    "boxBg": "#ffffff",
    "boxBorder": "#e2e8f0",
    "boxEditBg": "#f8fafc",
    "boxHoverBorder": "#cbd5e1",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.08)",
    "boxText": "#334155",
    "btnBorder": "#e2e8f0",
    "btnHoverBg": "#f1f5f9",
    "btnHoverBorder": "#cbd5e1",
    "btnText": "#475569",
    "dot": "#dde1e7",
    "drawPreviewBg": "rgba(59,130,246,0.04)",
    "hintBg": "#ffffff",
    "hintText": "#94a3b8",
    "modalBg": "#ffffff",
    "modalOverlay": "rgba(0,0,0,0.4)",
    "modalSub": "#64748b",
    "modalText": "#334155",
    "name": "Light",
    "swatchBg": "#f8f9fb",
    "swatchBorder": "#e2e8f0",
    "swatchBox": "#e2e8f0",
    "swatchBoxBorder": "#94a3b8",
    "toolbarBg": "#ffffff",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.08), 0 0 0 1px rgba(0,0,0,0.04)",
    "toolbarText": "#64748b",
    "toolbarTitle": "#1e293b",
  },
  "matrix": {
    "accent": "#00ff41",
    "accentGlow": "rgba(0,255,65,0.15)",
    "accentHover": "#00cc33",
    "arrow": "#1a5a1a",
    "bg": "#0a0a0a",
    "boxBg": "#111811",
    "boxBorder": "#1a3a1a",
    "boxEditBg": "#0a0a0a",
    "boxHoverBorder": "#00ff41",
    "boxHoverShadow": "0 4px 20px rgba(0,255,65,0.1)",
    "boxText": "#00ff41",
    "btnBorder": "#1a3a1a",
    "btnHoverBg": "#1a3a1a",
    "btnHoverBorder": "#00ff41",
    "btnText": "#00ff41",
    "dot": "#0f1a0f",
    "drawPreviewBg": "rgba(0,255,65,0.05)",
    "hintBg": "#111811",
    "hintText": "#1a5a1a",
    "modalBg": "#111811",
    "modalOverlay": "rgba(0,0,0,0.6)",
    "modalSub": "#00cc33",
    "modalText": "#00ff41",
    "name": "Matrix",
    "swatchBg": "#0a0a0a",
    "swatchBorder": "#1a3a1a",
    "swatchBox": "#00ff41",
    "swatchBoxBorder": "#00ff41",
    "toolbarBg": "#111811",
    "toolbarShadow": "0 2px 16px rgba(0,255,0,0.06)",
    "toolbarText": "#00cc33",
    "toolbarTitle": "#00ff41",
  },
  "midnight": {
    "accent": "#7c7cff",
    "accentGlow": "rgba(124,124,255,0.2)",
    "accentHover": "#b48eff",
    "arrow": "#3d3d6b",
    "bg": "#0f0f1a",
    "boxBg": "#171728",
    "boxBorder": "#252547",
    "boxEditBg": "#0f0f1a",
    "boxHoverBorder": "#7c7cff",
    "boxHoverShadow": "0 4px 20px rgba(124,124,255,0.1)",
    "boxText": "#e0e0fc",
    "btnBorder": "#252547",
    "btnHoverBg": "#252547",
    "btnHoverBorder": "#7c7cff",
    "btnText": "#e0e0fc",
    "dot": "#171728",
    "drawPreviewBg": "rgba(124,124,255,0.06)",
    "hintBg": "#171728",
    "hintText": "#3d3d6b",
    "modalBg": "#171728",
    "modalOverlay": "rgba(0,0,0,0.6)",
    "modalSub": "#6e6ea8",
    "modalText": "#e0e0fc",
    "name": "Midnight",
    "swatchBg": "#0f0f1a",
    "swatchBorder": "#252547",
    "swatchBox": "#7c7cff",
    "swatchBoxBorder": "#7c7cff",
    "toolbarBg": "#171728",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.5)",
    "toolbarText": "#6e6ea8",
    "toolbarTitle": "#e0e0fc",
  },
  "monokai": {
    "accent": "#a6e22e",
    "accentGlow": "rgba(166,226,46,0.2)",
    "accentHover": "#f92672",
    "arrow": "#75715e",
    "bg": "#272822",
    "boxBg": "#3e3d32",
    "boxBorder": "#75715e",
    "boxEditBg": "#272822",
    "boxHoverBorder": "#a6e22e",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#f8f8f2",
    "btnBorder": "#75715e",
    "btnHoverBg": "#49483e",
    "btnHoverBorder": "#a6e22e",
    "btnText": "#f8f8f2",
    "dot": "#3e3d32",
    "drawPreviewBg": "rgba(166,226,46,0.08)",
    "hintBg": "#3e3d32",
    "hintText": "#75715e",
    "modalBg": "#3e3d32",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#a6e22e",
    "modalText": "#f8f8f2",
    "name": "Monokai",
    "swatchBg": "#272822",
    "swatchBorder": "#75715e",
    "swatchBox": "#a6e22e",
    "swatchBoxBorder": "#a6e22e",
    "toolbarBg": "#3e3d32",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#a6e22e",
    "toolbarTitle": "#f8f8f2",
  },
  "nightowl": {
    "accent": "#82aaff",
    "accentGlow": "rgba(130,170,255,0.2)",
    "accentHover": "#c792ea",
    "arrow": "#5f7e97",
    "bg": "#011627",
    "boxBg": "#0b2942",
    "boxBorder": "#1d3b53",
    "boxEditBg": "#011627",
    "boxHoverBorder": "#82aaff",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#d6deeb",
    "btnBorder": "#1d3b53",
    "btnHoverBg": "#1d3b53",
    "btnHoverBorder": "#82aaff",
    "btnText": "#d6deeb",
    "dot": "#0b2942",
    "drawPreviewBg": "rgba(130,170,255,0.08)",
    "hintBg": "#0b2942",
    "hintText": "#5f7e97",
    "modalBg": "#0b2942",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#5f7e97",
    "modalText": "#d6deeb",
    "name": "Night Owl",
    "swatchBg": "#011627",
    "swatchBorder": "#1d3b53",
    "swatchBox": "#82aaff",
    "swatchBoxBorder": "#82aaff",
    "toolbarBg": "#0b2942",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#5f7e97",
    "toolbarTitle": "#d6deeb",
  },
  "nord": {
    "accent": "#88c0d0",
    "accentGlow": "rgba(136,192,208,0.2)",
    "accentHover": "#8fbcbb",
    "arrow": "#81a1c1",
    "bg": "#2e3440",
    "boxBg": "#3b4252",
    "boxBorder": "#4c566a",
    "boxEditBg": "#2e3440",
    "boxHoverBorder": "#5e6779",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.3)",
    "boxText": "#eceff4",
    "btnBorder": "#4c566a",
    "btnHoverBg": "#434c5e",
    "btnHoverBorder": "#5e6779",
    "btnText": "#d8dee9",
    "dot": "#3b4252",
    "drawPreviewBg": "rgba(136,192,208,0.08)",
    "hintBg": "#3b4252",
    "hintText": "#81a1c1",
    "modalBg": "#3b4252",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#81a1c1",
    "modalText": "#eceff4",
    "name": "Nord",
    "swatchBg": "#2e3440",
    "swatchBorder": "#4c566a",
    "swatchBox": "#88c0d0",
    "swatchBoxBorder": "#88c0d0",
    "toolbarBg": "#3b4252",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.3)",
    "toolbarText": "#d8dee9",
    "toolbarTitle": "#eceff4",
  },
  "onedark": {
    "accent": "#61afef",
    "accentGlow": "rgba(97,175,239,0.2)",
    "accentHover": "#c678dd",
    "arrow": "#5c6370",
    "bg": "#282c34",
    "boxBg": "#21252b",
    "boxBorder": "#3e4451",
    "boxEditBg": "#282c34",
    "boxHoverBorder": "#61afef",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#abb2bf",
    "btnBorder": "#3e4451",
    "btnHoverBg": "#3e4451",
    "btnHoverBorder": "#61afef",
    "btnText": "#abb2bf",
    "dot": "#3e4451",
    "drawPreviewBg": "rgba(97,175,239,0.08)",
    "hintBg": "#21252b",
    "hintText": "#5c6370",
    "modalBg": "#21252b",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#61afef",
    "modalText": "#abb2bf",
    "name": "One Dark",
    "swatchBg": "#282c34",
    "swatchBorder": "#3e4451",
    "swatchBox": "#61afef",
    "swatchBoxBorder": "#61afef",
    "toolbarBg": "#21252b",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#61afef",
    "toolbarTitle": "#abb2bf",
  },
  "onelight": {
    "accent": "#4078f2",
    "accentGlow": "rgba(64,120,242,0.12)",
    "accentHover": "#a626a4",
    "arrow": "#a0a1a7",
    "bg": "#fafafa",
    "boxBg": "#ffffff",
    "boxBorder": "#e5e5e6",
    "boxEditBg": "#fafafa",
    "boxHoverBorder": "#4078f2",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.06)",
    "boxText": "#383a42",
    "btnBorder": "#e5e5e6",
    "btnHoverBg": "#f0f0f1",
    "btnHoverBorder": "#4078f2",
    "btnText": "#383a42",
    "dot": "#e5e5e6",
    "drawPreviewBg": "rgba(64,120,242,0.04)",
    "hintBg": "#ffffff",
    "hintText": "#a0a1a7",
    "modalBg": "#ffffff",
    "modalOverlay": "rgba(0,0,0,0.3)",
    "modalSub": "#a0a1a7",
    "modalText": "#383a42",
    "name": "One Light",
    "swatchBg": "#fafafa",
    "swatchBorder": "#e5e5e6",
    "swatchBox": "#4078f2",
    "swatchBoxBorder": "#4078f2",
    "toolbarBg": "#ffffff",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.06), 0 0 0 1px rgba(0,0,0,0.03)",
    "toolbarText": "#a0a1a7",
    "toolbarTitle": "#383a42",
  },
  "palenight": {
    "accent": "#c792ea",
    "accentGlow": "rgba(199,146,234,0.2)",
    "accentHover": "#89ddff",
    "arrow": "#697098",
    "bg": "#292d3e",
    "boxBg": "#343849",
    "boxBorder": "#444760",
    "boxEditBg": "#292d3e",
    "boxHoverBorder": "#c792ea",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#a6accd",
    "btnBorder": "#444760",
    "btnHoverBg": "#444760",
    "btnHoverBorder": "#c792ea",
    "btnText": "#a6accd",
    "dot": "#343849",
    "drawPreviewBg": "rgba(199,146,234,0.08)",
    "hintBg": "#343849",
    "hintText": "#697098",
    "modalBg": "#343849",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#697098",
    "modalText": "#a6accd",
    "name": "Palenight",
    "swatchBg": "#292d3e",
    "swatchBorder": "#444760",
    "swatchBox": "#c792ea",
    "swatchBoxBorder": "#c792ea",
    "toolbarBg": "#343849",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#697098",
    "toolbarTitle": "#a6accd",
  },
  "poimandres": {
    "accent": "#add7ff",
    "accentGlow": "rgba(173,215,255,0.15)",
    "accentHover": "#f087bd",
    "arrow": "#506477",
    "bg": "#1b1e28",
    "boxBg": "#252a37",
    "boxBorder": "#303340",
    "boxEditBg": "#1b1e28",
    "boxHoverBorder": "#add7ff",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#e4f0fb",
    "btnBorder": "#303340",
    "btnHoverBg": "#303340",
    "btnHoverBorder": "#add7ff",
    "btnText": "#e4f0fb",
    "dot": "#252a37",
    "drawPreviewBg": "rgba(173,215,255,0.06)",
    "hintBg": "#252a37",
    "hintText": "#506477",
    "modalBg": "#252a37",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#a6accd",
    "modalText": "#e4f0fb",
    "name": "Poimandres",
    "swatchBg": "#1b1e28",
    "swatchBorder": "#303340",
    "swatchBox": "#add7ff",
    "swatchBoxBorder": "#add7ff",
    "toolbarBg": "#252a37",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#a6accd",
    "toolbarTitle": "#e4f0fb",
  },
  "rosepine": {
    "accent": "#c4a7e7",
    "accentGlow": "rgba(196,167,231,0.2)",
    "accentHover": "#ebbcba",
    "arrow": "#6e6a86",
    "bg": "#191724",
    "boxBg": "#26233a",
    "boxBorder": "#403d52",
    "boxEditBg": "#191724",
    "boxHoverBorder": "#c4a7e7",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#e0def4",
    "btnBorder": "#403d52",
    "btnHoverBg": "#403d52",
    "btnHoverBorder": "#c4a7e7",
    "btnText": "#e0def4",
    "dot": "#26233a",
    "drawPreviewBg": "rgba(196,167,231,0.08)",
    "hintBg": "#26233a",
    "hintText": "#6e6a86",
    "modalBg": "#26233a",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#c4a7e7",
    "modalText": "#e0def4",
    "name": "Rose Pine",
    "swatchBg": "#191724",
    "swatchBorder": "#403d52",
    "swatchBox": "#c4a7e7",
    "swatchBoxBorder": "#c4a7e7",
    "toolbarBg": "#26233a",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#c4a7e7",
    "toolbarTitle": "#e0def4",
  },
  "solarized": {
    "accent": "#2aa198",
    "accentGlow": "rgba(42,161,152,0.2)",
    "accentHover": "#268bd2",
    "arrow": "#586e75",
    "bg": "#002b36",
    "boxBg": "#073642",
    "boxBorder": "#586e75",
    "boxEditBg": "#002b36",
    "boxHoverBorder": "#2aa198",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#fdf6e3",
    "btnBorder": "#586e75",
    "btnHoverBg": "#0a4a5c",
    "btnHoverBorder": "#2aa198",
    "btnText": "#93a1a1",
    "dot": "#073642",
    "drawPreviewBg": "rgba(42,161,152,0.08)",
    "hintBg": "#073642",
    "hintText": "#586e75",
    "modalBg": "#073642",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#2aa198",
    "modalText": "#fdf6e3",
    "name": "Solarized",
    "swatchBg": "#002b36",
    "swatchBorder": "#586e75",
    "swatchBox": "#2aa198",
    "swatchBoxBorder": "#2aa198",
    "toolbarBg": "#073642",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#2aa198",
    "toolbarTitle": "#fdf6e3",
  },
  "solarizedLight": {
    "accent": "#268bd2",
    "accentGlow": "rgba(38,139,210,0.12)",
    "accentHover": "#2aa198",
    "arrow": "#93a1a1",
    "bg": "#fdf6e3",
    "boxBg": "#eee8d5",
    "boxBorder": "#d6cdb5",
    "boxEditBg": "#fdf6e3",
    "boxHoverBorder": "#268bd2",
    "boxHoverShadow": "0 4px 16px rgba(0,0,0,0.06)",
    "boxText": "#586e75",
    "btnBorder": "#d6cdb5",
    "btnHoverBg": "#e4dcc6",
    "btnHoverBorder": "#268bd2",
    "btnText": "#586e75",
    "dot": "#eee8d5",
    "drawPreviewBg": "rgba(38,139,210,0.05)",
    "hintBg": "#eee8d5",
    "hintText": "#93a1a1",
    "modalBg": "#eee8d5",
    "modalOverlay": "rgba(0,0,0,0.3)",
    "modalSub": "#93a1a1",
    "modalText": "#586e75",
    "name": "Solarized Light",
    "swatchBg": "#fdf6e3",
    "swatchBorder": "#d6cdb5",
    "swatchBox": "#268bd2",
    "swatchBoxBorder": "#268bd2",
    "toolbarBg": "#eee8d5",
    "toolbarShadow": "0 2px 12px rgba(0,0,0,0.06)",
    "toolbarText": "#93a1a1",
    "toolbarTitle": "#586e75",
  },
  "synthwave": {
    "accent": "#ff7edb",
    "accentGlow": "rgba(255,126,219,0.2)",
    "accentHover": "#36f9f6",
    "arrow": "#614d85",
    "bg": "#262335",
    "boxBg": "#2e2346",
    "boxBorder": "#463465",
    "boxEditBg": "#262335",
    "boxHoverBorder": "#ff7edb",
    "boxHoverShadow": "0 4px 20px rgba(255,126,219,0.15)",
    "boxText": "#ffffff",
    "btnBorder": "#463465",
    "btnHoverBg": "#463465",
    "btnHoverBorder": "#ff7edb",
    "btnText": "#ffffff",
    "dot": "#2e2346",
    "drawPreviewBg": "rgba(255,126,219,0.08)",
    "hintBg": "#2e2346",
    "hintText": "#614d85",
    "modalBg": "#2e2346",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#ff7edb",
    "modalText": "#ffffff",
    "name": "Synthwave 84",
    "swatchBg": "#262335",
    "swatchBorder": "#463465",
    "swatchBox": "#ff7edb",
    "swatchBoxBorder": "#ff7edb",
    "toolbarBg": "#2e2346",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#ff7edb",
    "toolbarTitle": "#ffffff",
  },
  "tokyo": {
    "accent": "#7aa2f7",
    "accentGlow": "rgba(122,162,247,0.2)",
    "accentHover": "#bb9af7",
    "arrow": "#565f89",
    "bg": "#1a1b26",
    "boxBg": "#24283b",
    "boxBorder": "#3b4261",
    "boxEditBg": "#1a1b26",
    "boxHoverBorder": "#7aa2f7",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.4)",
    "boxText": "#c0caf5",
    "btnBorder": "#3b4261",
    "btnHoverBg": "#3b4261",
    "btnHoverBorder": "#7aa2f7",
    "btnText": "#a9b1d6",
    "dot": "#24283b",
    "drawPreviewBg": "rgba(122,162,247,0.08)",
    "hintBg": "#24283b",
    "hintText": "#565f89",
    "modalBg": "#24283b",
    "modalOverlay": "rgba(0,0,0,0.5)",
    "modalSub": "#7aa2f7",
    "modalText": "#c0caf5",
    "name": "Tokyo Night",
    "swatchBg": "#1a1b26",
    "swatchBorder": "#3b4261",
    "swatchBox": "#7aa2f7",
    "swatchBoxBorder": "#7aa2f7",
    "toolbarBg": "#24283b",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.4)",
    "toolbarText": "#7aa2f7",
    "toolbarTitle": "#c0caf5",
  },
  "vesper": {
    "accent": "#ffc799",
    "accentGlow": "rgba(255,199,153,0.15)",
    "accentHover": "#ffb380",
    "arrow": "#444444",
    "bg": "#101010",
    "boxBg": "#1c1c1c",
    "boxBorder": "#282828",
    "boxEditBg": "#101010",
    "boxHoverBorder": "#ffc799",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.5)",
    "boxText": "#b3b3b3",
    "btnBorder": "#282828",
    "btnHoverBg": "#282828",
    "btnHoverBorder": "#ffc799",
    "btnText": "#b3b3b3",
    "dot": "#1c1c1c",
    "drawPreviewBg": "rgba(255,199,153,0.06)",
    "hintBg": "#1c1c1c",
    "hintText": "#444444",
    "modalBg": "#1c1c1c",
    "modalOverlay": "rgba(0,0,0,0.6)",
    "modalSub": "#666666",
    "modalText": "#b3b3b3",
    "name": "Vesper",
    "swatchBg": "#101010",
    "swatchBorder": "#282828",
    "swatchBox": "#ffc799",
    "swatchBoxBorder": "#ffc799",
    "toolbarBg": "#1c1c1c",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.5)",
    "toolbarText": "#666666",
    "toolbarTitle": "#b3b3b3",
  },
  "vitesse": {
    "accent": "#4d9375",
    "accentGlow": "rgba(77,147,117,0.2)",
    "accentHover": "#c98a7d",
    "arrow": "#4a4a4a",
    "bg": "#121212",
    "boxBg": "#1e1e1e",
    "boxBorder": "#2e2e2e",
    "boxEditBg": "#121212",
    "boxHoverBorder": "#4d9375",
    "boxHoverShadow": "0 4px 20px rgba(0,0,0,0.5)",
    "boxText": "#dbd7ca",
    "btnBorder": "#2e2e2e",
    "btnHoverBg": "#2e2e2e",
    "btnHoverBorder": "#4d9375",
    "btnText": "#dbd7ca",
    "dot": "#1e1e1e",
    "drawPreviewBg": "rgba(77,147,117,0.08)",
    "hintBg": "#1e1e1e",
    "hintText": "#4a4a4a",
    "modalBg": "#1e1e1e",
    "modalOverlay": "rgba(0,0,0,0.6)",
    "modalSub": "#6b7280",
    "modalText": "#dbd7ca",
    "name": "Vitesse Dark",
    "swatchBg": "#121212",
    "swatchBorder": "#2e2e2e",
    "swatchBox": "#4d9375",
    "swatchBoxBorder": "#4d9375",
    "toolbarBg": "#1e1e1e",
    "toolbarShadow": "0 2px 16px rgba(0,0,0,0.5)",
    "toolbarText": "#6b7280",
    "toolbarTitle": "#dbd7ca",
  },
}
`;

exports[`undo/redo undo/redo full cycle snapshot 1`] = `
{
  "afterTwo": "
        <svg id="arrows">
          <defs>
            <marker id="arrowhead" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto" markerUnits="userSpaceOnUse">
              <polygon points="0 0, 10 3.5, 0 7" fill="#94a3b8"></polygon>
            </marker>
          </defs>
        </svg>
      <div class="box" data-id="ID" style="left: 0px; top: 0px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">First</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div><div class="box selected" data-id="ID" style="left: 300px; top: 300px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">Second</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>",
  "afterUndo": "
        <svg id="arrows"></svg>
      <div class="box" data-id="ID" style="left: 0px; top: 0px; width: 200px; height: 100px;"><svg class="marching-svg" preserveAspectRatio="none"><rect x="2" y="2" rx="14" ry="14"></rect></svg><div class="box-text">First</div><div class="edge-handle top-0"></div><div class="edge-handle top-1"></div><div class="edge-handle top-2"></div><div class="edge-handle right-0"></div><div class="edge-handle right-1"></div><div class="edge-handle right-2"></div><div class="edge-handle bottom-0"></div><div class="edge-handle bottom-1"></div><div class="edge-handle bottom-2"></div><div class="edge-handle left-0"></div><div class="edge-handle left-1"></div><div class="edge-handle left-2"></div></div>",
}
`;
